=== 2016-12-28
* Enhancement
  * Updated Table [] method to return a row that has matching partial text in any column
  * Updated TableRow [] method to return column that matching partial text in any column
  * Added the following aliased methods to their corresponding Accessors method
    a => link
    hidden => hidden_field
    img => image
    li => list_item
    ol => ordered_list
    p => paragraph
    radio => radio_button
    select => select_list
    td => cell
    textarea => text_area
    ul => unordered_list
  * Added support for the following new elements
    Area
    Canvas
    Audio
  * Added ability to find list_item by :text
===Version v1.1.4/ 2016-12-27
* Enhancement
  * Added ability to find span's by title
  * Changed order of initialization so initialize_page is called after goto
  * Added flash method to Element to temporarily change the background color
  * Added when_not_present method to Element
  * Added default override of page level waits - Druid.default_page_wait
  * Added default override of element level waits - Druid.default_element_wait
  * Added the ability to find a TableRow by providing a String to the [] method
  * Added the ability to find a TableCell by providing a String to the [] method from TableRow
  * Updated link to be able to identify by title
  * Updated div to be able to identify by title
  * Added ability to find text_field by :text and :label
  * Added select_value method to SelectList
* Fixes
  * Modified text area methods so it clears before setting new text
  * Updated [] method on Table to return nil when bad row header is provided
  * Updated [] method on TableRow to return nil when bad column header is provided
  * Fixed populate_page_with to work with text areas
=== 2016-12-26
* Enhancement
  * Changed page_url to accept a symbol that will cause it to call a corresponding method
  * Updated all accessor methods to take a default identifier of {:index => 0}