@@ -1,3 +1,6 @@
+=== 2016-12-30
+* Enhancement
+  * Added hover method to Element. Browser support is limited
 === 2016-12-28
 * Enhancement
   * Updated Table [] method to return a row that has matching partial text in any column
